08-deployment-with-ingress-and-tls/web-application/deployment/web-application.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-application
  name: web-application
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-application
  template:
    metadata:
      labels:
        app: web-application
    spec:
      containers:
      - name: hello
        image: syseleven/metakube-hello:1.0.0
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 100m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: web-application
spec:
  selector:
    app: web-application
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
