08-deployment-with-ingress-and-tls/web-application/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - web-application-CHANGEME.workshop.metakube.org
      secretName: workshop-tls-cert
  rules:
    - host: web-application-CHANGEME.workshop.metakube.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-application
                port:
                  number: 80
