08-deployment-with-ingress-and-tls/web-application/deployment/ingress_with_annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - djarosch-annotation.workshop.metakube.org
      secretName: djarosch-annotation-workshop-metakube-org-tls
  rules:
    - host: djarosch-annotation.workshop.metakube.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-application
                port:
                  number: 80
